main.tf
########################### Gitlab Instance #################################################

resource "google_compute_instance" "gitlab" {
  depends_on   = [
                  google_secret_manager_secret_version.gitlab-self-signed-cert-crt-version,
                  google_secret_manager_secret_version.gitlab-self-signed-cert-key-version,
                  google_secret_manager_secret_version.gitlab_initial_root_pwd,
                  google_secret_manager_secret_version.gitlab_runner_registration_token,
                  google_secret_manager_secret_version.gitlab_api_token
                  ]
  provider     = google.offensive-pipeline
  name         = "${var.infra_name}-gitlab"
  machine_type = var.plans[var.size]
  zone         = "${var.region}-${var.zone}"
  tags         = ["${var.infra_name}-gitlab"]


    service_account {
      email  = google_service_account.gitlab_service_account.email
      scopes = ["cloud-platform"]
    }
  
    boot_disk {
      initialize_params {
        image = var.osimages[var.osimage]
        size  = "100"
        type  = "pd-standard"
      }
    }

    network_interface {
      subnetwork = module.gcp-network.subnets_names[0]
      access_config {}
    }


  metadata = {
    gcs-prefix                      = "gs://${google_storage_bucket.deployment_utils.name}"
    # Migrate vars Start #
    migrated-gitlab-backup-password = var.migrate_gitlab ? var.migrate_gitlab_backup_password : ""
    gcs-path-to-backup              = var.migrate_gitlab ? "gs://${google_storage_bucket.deployment_utils.name}/${google_storage_bucket_object.gitlab_migrate_backup[0].name}" : ""
    migrated-gitlab-version         = var.migrate_gitlab ? var.migrate_gitlab_version : ""
    # Migrate vars End #
    startup-script-url              = var.migrate_gitlab ? join("", ["gs://", google_storage_bucket.deployment_utils.name,"/",google_storage_bucket_object.gitlab_migrate_script[0].name]) : join("", ["gs://", google_storage_bucket.deployment_utils.name,"/",google_storage_bucket_object.gitlab_install_script.name])
    instance-external-domain        = var.external_hostname != "" ? var.external_hostname : local.instance_internal_domain
    instance-protocol               = var.gitlab_instance_protocol
    gitlab-initial-root-pwd-secret	= google_secret_manager_secret.gitlab_initial_root_pwd.secret_id
    gitlab-api-token-secret         = google_secret_manager_secret.gitlab_api_token.secret_id
    gitlab-cert-key-secret         	= google_secret_manager_secret.gitlab-self-signed-cert-key.secret_id
    gitlab-cert-public-secret	    = google_secret_manager_secret.gitlab-self-signed-cert-crt.secret_id
    gitlab-ci-runner-registration-token-secret = google_secret_manager_secret.gitlab_runner_registration_token.secret_id
    gitlab-backup-key-secret        = google_secret_manager_secret.gitlab_backup_key.secret_id
    gitlab-backup-bucket-name       = var.backups_bucket_name
  }
lifecycle {
    ignore_changes = [
        metadata,
    ]
  }

}





################################ Helm chart deployments ##############################


resource "helm_release" "gitlab-runner-linux" {
  depends_on = [
                module.gke,
                module.gke_auth
                ]
  name       = "linux"
  # repository = "https://charts.gitlab.io/gitlab"
  chart      = "https://gitlab-charts.s3.amazonaws.com/gitlab-runner-0.33.1.tgz"
  
  values     = [
    file("${path.module}/gitlab-runner/linux-values.yaml")
    ]
 
  set {
    name  = "gitlabUrl"
    value =  "${var.gitlab_instance_protocol}://${local.instance_internal_domain}"
  }
  set {
    name  = "runners.cloneUrl"
    value =  "${var.gitlab_instance_protocol}://${local.instance_internal_domain}"
  }
  set {
    name  = "certsSecretName"
    value = "${local.instance_internal_domain}-cert"
  }
  set_sensitive {
    name  = "runnerRegistrationToken"
    value = random_password.gitlab_runner_registration_token.result
  }
}


resource "helm_release" "gitlab-runner-kaniko" {
  depends_on = [
                module.gke,
                module.gke_auth,
                kubernetes_namespace.sensitive-namespace
                ]
  name       = "kaniko"
  namespace  = "sensitive"
  # repository = "https://charts.gitlab.io/gitlab"
  chart      = "https://gitlab-charts.s3.amazonaws.com/gitlab-runner-0.33.1.tgz"
  
  values     = [
    file("${path.module}/gitlab-runner/kaniko-values.yaml")
    ]

  set {
    name  = "gitlabUrl"
    value =  "${var.gitlab_instance_protocol}://${local.instance_internal_domain}"
  }
  set {
    name  = "runners.cloneUrl"
    value =  "${var.gitlab_instance_protocol}://${local.instance_internal_domain}"
  }
  set {
    name  = "certsSecretName"
    value = "${local.instance_internal_domain}-cert"
  }
  set_sensitive {
    name  = "runnerRegistrationToken"
    value = random_password.gitlab_runner_registration_token.result
  }
}


resource "helm_release" "gitlab-runner-win" {
  depends_on = [
                module.gke,
                module.gke_auth
                ]
  name       = "windows"
  # repository = "https://charts.gitlab.io"
  chart      = "https://gitlab-charts.s3.amazonaws.com/gitlab-runner-0.35.3.tgz"
  
  values     = [
    file("${path.module}/gitlab-runner/win-values.yaml")
    ]

  set {
    name  = "gitlabUrl"
    value = "${var.gitlab_instance_protocol}://${local.instance_internal_domain}"
  }
  set {
    name  = "runners.cloneUrl"
    value =  "${var.gitlab_instance_protocol}://${local.instance_internal_domain}"
  }
  set {
    name  = "certsSecretName"
    value = "${local.instance_internal_domain}-cert"
  }
  set_sensitive {
    name  = "runnerRegistrationToken"
    value = random_password.gitlab_runner_registration_token.result
  }
}
